--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "freedraw",
   "version": "1.0.0",
   "scripts": {
-    "build": "node build/build.js",
-    "dev": "node build/dev-server.js"
+    "build": "webpack -p",
+    "start": "webpack-dev-server --open"
   },
   "engines": {
     "node": ">= 7",
@@ -20,10 +20,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.27.3",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.1.4",
@@ -31,7 +28,6 @@
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-merge": "^4.0.0"
+    "webpack-dev-server": "^2.4.2"
   }
 }
