--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bulma": "^0.3.2",
     "vue": "^2.2.4",
+    "vue-color": "^2.0.6",
     "vue-router": "^2.3.0"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "css-loader": "^0.27.3",
     "express": "^4.15.2",
     "html-webpack-plugin": "^2.28.0",
+    "sass-loader": "^6.0.3",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.3",
