--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.27.3",
     "express": "^4.15.2",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.0",
     "sass-loader": "^6.0.3",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.1.4",
